<resources>
    <string name="app_name">ShopApp</string>

    <string name="latest_arrivals">Latest Arrivals</string>
    <string name="related_items">Related Items</string>
    <string name="popular">Popular</string>
    <string name="blog_posts">Blog Posts</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="my_account">My Account</string>
    <string name="personal_info">Personal Info</string>
    <string name="search">Search</string>
    <string name="price_label">Price:</string>
    <string name="quantity_label">QTY:</string>
    <string name="variant_label">Variant:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="quantity_warning_message">Please select a quantity</string>
    <string name="default_product_quantity">1</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="sort_title">Sort by</string>
    <string name="remove_button">Remove</string>
    <string name="each_price_pattern">%s each</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="empty_cart_message">Your cart is empty :(</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="create_new_account">Create new account</string>
    <string name="login">Login</string>
    <string name="password">Password*</string>
    <string name="create_password">Create Password*</string>
    <string name="empty_fields_error_message">Please fill required fields</string>
    <string name="invalid_email_error_message">Please enter correct email address</string>
    <string name="invalid_password_error_message">Please enter correct password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="register_success_message">You have been successfully registered and logged in</string>
    <string name="login_success_message">You have been successfully logged in</string>
    <string name="forgot_label">Forgot?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password_title">Reset your password</string>
    <string name="check_inbox_message">Please check your inbox</string>
    <string name="logout_success_message">You have been successfully logged out</string>
    <string name="account_sign_in_message">Sign In to shop and view orders</string>
    <string name="policy_text">By creating your account, you accept our</string>
    <string name="and">and</string>
    <string name="welcome">Welcome</string>
    <string name="my_orders">My Orders</string>
    <string name="clear">Clear</string>
    <string name="reset_your_password_title">Reset Your Password</string>
    <string name="reset_your_password_description">Enter your address below and follow the instructions in the email will send you shortly</string>
    <string name="reset_link_has_been_sent_to">Reset link has been sent to</string>
    <string name="reset_link_description">To reset your password just click the link in the email we sent you!</string>
    <string name="do_not_receive_it">Don\'t receive it?</string>
    <string name="do_not_forget_to_check">Don\'t forget to check your mail or click the link below and we\'ll send you a new link</string>
    <string name="resend_reset_link">Resend reset link</string>
    <string name="items_count">"Item(s):&#032;</string>
    <string name="total_price_pattern">Total: %s</string>
    <string name="order_number_pattern">Order #%d</string>
    <string name="order_date_pattern">Placed on %s</string>
    <string name="description">Description</string>
    <string name="n_a_placeholder">N/A</string>
    <string name="product_unavailable">This product is temporarily unavailable</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="billing_address">Billing Address</string>
    <string name="details">Details</string>
    <string name="selected_options_pattern">%s: %s</string>
    <string name="order_details">Order Details</string>
    <string name="quantity_label_pattern">QTY: %d</string>
    <string name="cart_product_title">%s %s</string>
    <string name="save_changes">Save changes</string>
    <string name="change_password">Change password</string>
    <string name="newest_sort_title">The Newest first</string>
    <string name="price_high_to_low_sort_title">Price High to Low</string>
    <string name="price_low_to_high_sort_title">Price Low to High</string>
    <string name="product_added">Product added to cart</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="set_new_password">Set New Password</string>
    <string name="update">Update</string>
    <string name="password_match_error_message">Passwords not match</string>
    <string name="customer_changed">Profile changed</string>
    <string name="accept_promotion_emails">Accept promotion emails</string>
    <string name="thanks_for_shopping_with_us">Thanks for shopping with us!</string>
    <string name="view_order_details">View order details</string>
    <string name="your_order_number">Your order number is </string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="range_price">From %s</string>
    <string name="product_option_title_pattern">%s:</string>
    <string name="you_have_no_orders_yet">You have no order yet</string>
    <string name="there_are_no_products_yet">There are no products yet :(</string>
    <string name="there_are_no_categories_yet">There are no categories yet :(</string>
    <string name="no_results_found">No results found</string>
    <string name="checkout">Checkout</string>
    <string name="network_connection_error">Sorry - something did not go through! Please check your network connection and try again.</string>
    <string name="default_error">Something went wrong…</string>
    <string name="empty_message">It\'s empty in here.</string>
    <string name="try_again">Try Again</string>
    <string name="close">Close</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email*</string>
    <string name="address">Address*</string>
    <string name="first_name_required">First Name*</string>
    <string name="last_name_required">Last Name*</string>
    <string name="second_address">Address 2</string>
    <string name="city">City*</string>
    <string name="state">State*</string>
    <string name="country">Country*</string>
    <string name="zip">zip code*</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_required">Phone number*</string>
    <string name="my_cart">My Cart</string>
    <string name="section_see_all">See All</string>
    <string name="default_shipping_address">Default shipping address</string>
    <string name="submit">Submit</string>
    <string name="pay_with_this_card">Pay with this card</string>
    <string name="invalid_address">Invalid address</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="set_as_default">Set as default</string>
    <string name="done">Done</string>
    <string name="tel_prefix">Tel: %s</string>
    <string name="full_name_pattern">%1$s %2$s</string>
    <string name="total_price">Total</string>
    <string name="email_optionally">Email</string>
    <string name="shop">Shop</string>
    <string name="add_new_address">Add New Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <string name="please_select_payment">Please select a Payment Method</string>
    <string name="web_payment_label">Use the card to pay for on our website</string>
    <string name="card_payment_label">Use the card to pay for on our app</string>
    <string name="android_payment_label">You can use any credit or debit card in your Google Account (including your cards in Android Pay) for quick, easy checkout</string>
    <string name="web_payment">Pay on our website</string>
    <string name="card_payment">Pay by Card</string>
    <string name="android_payment">Android Pay</string>
    <string name="pay_button">Pay</string>
    <string name="card_name_error">The card holder name is incorrect</string>
    <string name="card_date_error">The card\'s expiration date is invalid</string>
    <string name="card_cvv_error">The card\'s security code is invalid</string>
    <string name="card_number_error">The card number is incorrect</string>
    <string name="payment_canceled">Payment canceled</string>
    <string name="to_shipping_method_label">Continue to shipping method</string>
    <string name="add_billing_address">Add Billing Address</string>
    <string name="use_same_address">Use the same address for payment and delivery</string>
    <string name="shipping_empty_fields_error">Please fill required fields on the shipping screen</string>
    <string name="address_empty_fields_error">Please fill all required fields</string>
    <string name="empty_shipping_rates_message">There are no suitable deliveries</string>
    <string name="payment_type">Payment Type</string>
    <string name="payment">Payment</string>
    <string name="credit_card">Credit / Debit Card</string>
    <string name="add_card">Add card</string>
    <string name="add_payment_type">Add payment type</string>
    <string name="card_holder_name">Card holder name*</string>
    <string name="card_number">Card number*</string>
    <string name="expiration_date">Expiration date</string>
    <string name="month">Month*</string>
    <string name="year">Year*</string>
    <string name="cvv">CVV*</string>
    <string name="card_type_placeholder">%1$s (%2$s)</string>
    <string name="card_unknown_placeholder">(%s)</string>
    <string name="card_exp_placeholder">Exp: %1$s / %2$s</string>
    <string name="shipping_options">Shipping Options</string>
    <string name="please_add_shipping_address_first">Please, add shipping address first</string>
    <string name="order_can_not_be_processed">Due to technical reasons the order can not be processed</string>
    <string name="place_order">Place order</string>
    <string name="customer_email">Customer Email</string>
    <string name="we_accept">We accept</string>
    <string name="your_purchase_could_not_be_completed">Your purchase couldn\'t be completed</string>
    <string name="back_to_shop">Back to shop</string>
    <string name="something_happened">Something happened…</string>
    <string name="delete_address_message">Are you sure you want to delete this address?</string>
    <string name="edit_address_message">Are you sure you want to edit this address?</string>
    <string name="сould_not_find">Could not find</string>
    <string name="сould_not_find_with_placeholder">Could not find %s</string>
    <string name="product">Product</string>
    <string name="article">Article</string>
    <string name="order">Order</string>
    <string name="back">Back</string>
    <string name="more">More</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter quantity</string>

</resources>
