<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:focusableInTouchMode="true"
    tools:ignore="SmallSp">

    <View
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/reset_your_password_title"
        android:textColor="@color/textColorPrimary"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="58dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/reset_your_password_description"
        android:textColor="@color/textColorSecondary"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTitle" />

    <com.shopapp.ui.custom.UpperCaseHintTextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:animateLayoutChanges="true"
        android:hint="@string/email"
        app:hintTextAppearance="@style/HintTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordDescription">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailInput"
            style="@style/TextInputEditText"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1" />
    </com.shopapp.ui.custom.UpperCaseHintTextInputLayout>

    <Button
        android:id="@+id/submitButton"
        style="@style/PrimaryButton"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="32dp"
        android:enabled="false"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout" />

    <android.support.constraint.Group
        android:id="@+id/inputGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="submitButton,forgotPasswordTitle,forgotPasswordDescription,emailInputLayout,background" />

    <View
        android:id="@+id/topBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bottomSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/submitButton" />

    <TextView
        android:id="@+id/resetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/reset_link_has_been_sent_to"
        android:textColor="@color/textColorPrimary"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resetEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetLabel" />

    <TextView
        android:id="@+id/resetDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="58dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/reset_link_description"
        android:textColor="@color/textColorSecondary"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetEmail" />

    <Space
        android:id="@+id/bottomSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetDescription" />

    <TextView
        android:id="@+id/doNotReceiveLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/do_not_receive_it"
        android:textColor="@color/textColorSecondary"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomSpace" />

    <TextView
        android:id="@+id/doNotReceiveDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="58dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/do_not_forget_to_check"
        android:textColor="@color/textColorSecondary"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doNotReceiveLabel" />

    <TextView
        android:id="@+id/resend"
        style="@style/UnderlineText"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/resend_reset_link"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doNotReceiveDescription" />

    <android.support.constraint.Group
        android:id="@+id/resendGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="resend,resetDescription,resetLabel,resetEmail,topBackground,doNotReceiveLabel,bottomSpace,doNotReceiveDescription" />

</android.support.constraint.ConstraintLayout>