<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="18dp"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_popup_triangle"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newestSort"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/newest_sort_title"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/highToLowSort"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/price_high_to_low_sort_title"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/lowToHighSort"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/price_low_to_high_sort_title"
            android:textColor="@color/black"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>