<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.shopapp.ui.custom.AvatarView
        android:id="@+id/avatarView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:textSize="@dimen/avatar_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/avatarViewSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/avatarView" />

    <TextView
        android:id="@+id/welcomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:text="@string/welcome"
        android:textColor="@color/textColorSecondary"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/avatarView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/textColorPrimary"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/avatarView"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLabel" />

    <TextView
        android:id="@+id/myOrders"
        style="@style/PolicyView"
        android:text="@string/my_orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarViewSpace" />

    <TextView
        android:id="@+id/personalInfo"
        style="@style/PolicyView"
        android:layout_marginTop="4dp"
        android:text="@string/personal_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myOrders" />

    <TextView
        android:id="@+id/shippingAddress"
        style="@style/PolicyView"
        android:layout_marginTop="4dp"
        android:text="@string/shipping_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalInfo" />

</android.support.constraint.ConstraintLayout>
